@@ -7,7 +7,7 @@ use Getopt::Std;
 use CIF::Client;
 
 my %opts;
-getopt('hHL:p:f:q:c:s:r:C:', \%opts);
+getopt('hTHL:p:f:q:c:s:r:C:', \%opts);
 
 my $query       = $opts{'q'} || shift;
 our $debug       = ($opts{'d'}) ? 1 : 0;
@@ -25,6 +25,7 @@ our $uuid        = $opts{'u'} || 0;
 our $relateduuid = $opts{'R'} || 0;
 my $plugs = join(',',CIF::Client::_plugins);
 my $simple_hashes = (defined($opts{'H'})) ? $opts{'H'} : 1;
+my $verify_tls = $opts{'T'};
 
 die(usage()) unless($query || $opts{'h'});
 
@@ -45,6 +46,7 @@ Usage: perl $0 -q xyz.com
     -N  --nomap:            don't map restrictions on server (queries only)
     -H  --simplehashes:     translate the complex json documents to simplified key value pairs, default: $simple_hashes
     -C  --config:           specify cofiguration file, default $c
+    -T  --verify_tls:       verify tls hostname, default: $verify_tls
 
 Queries:
 
@@ -69,6 +71,8 @@ Feeds:
     host = https://example.com:443/api
     apikey = xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
     timeout = 60
+    # add this if you have a self signed cert
+    verify_tls = 0
 
 EOF
 }
@@ -78,6 +82,7 @@ my ($client,$err) = CIF::Client->new({
     max_desc    => $max_desc,
     nolog       => $nolog,
     simple_hashes => $simple_hashes,
+    verify_tls  => $verify_tls,
 });
 
 die($err) unless($client);
